Add missing servicesToSkip and serviceProvidersToSkip explicitly